# RAG_COURSE

./: .gitignore  pyproject.toml  requirements.txt  test.ipynb
0-DataIngestionParsing/: 1-DataLoading.ipynb  2-DenseSparse.ipynb  3-MultiModal.ipynb
0-DataIngestionParsing/data/text_files/: Ml_intro.txt  Rag_intro.txt
