[project]
name = "rag-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.4.1",
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.2",
    "jq>=1.11.0",
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.8",
    "matplotlib>=3.10.8",
    "numpy==2.3.3",
    "ollama>=0.6.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pdfminer-six>=20260107",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.2",
    "tiktoken>=0.12.0",
    "unstructured>=0.12.5",
    "wikipedia>=1.4.0",
]
